# passwordchecker

./: .pre-commit-config.yaml  README.md  checkmypass.py  passlist.txt  pyproject.toml
