[tool.poetry]
name = "passwordchecker"
version = "0.1.0"
description = "Check if your passwords have been exposed"
authors = ["Yevhenii Pylypchuk <y.pylypchuk@setuniversity.edu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
